# ChangeLog for net-p2p/gift-gnutella
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift-gnutella/ChangeLog,v 1.19 2005/02/02 16:56:09 squinky86 Exp $

  02 Feb 2005; Jon Hood <squinky86@gentoo.org> gift-gnutella-0.0.10.ebuild:
  Fix postinstall information.

*gift-gnutella-0.0.10 (14 Jan 2005)

  14 Jan 2005; Jon Hood <squinky86@gentoo.org> +gift-gnutella-0.0.10.ebuild:
  Version bump, #77429, thanks Marshall Roch <marshall@exclupen.com> and centic.

*gift-gnutella-0.0.9.2-r1 (14 Jan 2005)

  14 Jan 2005; Jon Hood <squinky86@gentoo.org>
  +gift-gnutella-0.0.9.2-r1.ebuild, -gift-gnutella-0.0.9.2.ebuild:
  Stable version bump to fix #76121.

  11 Sep 2004; Jon Hood <squinky86@gentoo.org> -files/0.0.9.2-nodes.patch.bz2,
  +files/cacheupdate.sh, gift-gnutella-0.0.9.2.ebuild:
  Remove gwebcache patch and create a nice updating script instead.

  01 Sep 2004; Jon Hood <squinky86@gentoo.org> +files/0.0.9.2-nodes.patch.bz2,
  gift-gnutella-0.0.9.2.ebuild:
  Adding updated caches irt #62544.

  23 Jul 2004; Jon Hood <squinky86@gentoo.org>
  +files/gift-gnutella-gcc35.patch, gift-gnutella-0.0.9.2.ebuild:
  gcc-3.5 lvalue fix and cleanup from Jon Oberheide

  18 Jul 2004; Jon Hood <squinky86@gentoo.org> gift-gnutella-0.0.9.2.ebuild:
  fix gift.conf -> giftd.conf typo; thanks Bill Skellenger
  <william@skellenger.net>, #57425

  06 Jul 2004; Jon Hood <squinky86@gentoo.org> gift-gnutella-0.0.9.2.ebuild:
  fix R/DEPEND irt #34161, thanks Tom Forsythe <gentoobugs@animelover.com>

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> gift-gnutella-0.0.9.2.ebuild:
  virtual/glibc needs changed to virtual/libc

  23 Jun 2004; Jason Wever <weeve@gentoo.org> gift-gnutella-0.0.9.2.ebuild:
  Stable on sparc.

  27 Apr 2004; Jon Hood <squinky86@gentoo.org> gift-gnutella-0.0.9.2.ebuild:
  stable on x86, clean old ebuilds

  25 Apr 2004; Jon Hood <squinky86@gentoo.org>
  gift-gnutella-0.0.5.ebuild, gift-gnutella-0.0.9.1.ebuild,