@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 274b20f85581155486ff447a395fa665 gift-gnutella-0.0.10.ebuild 1254
-MD5 773dd704c57740fc43c6d5bb8c7979ae gift-gnutella-0.0.9.2-r1.ebuild 1456
-MD5 bbdc2fdd5bc517b517c514956d04424c ChangeLog 3113
+MD5 ee6242ff5d1097f588d23aaac46ef549 gift-gnutella-0.0.10.ebuild 1246
+MD5 9ab9bc48a417687cdaabcb0f4d9f58c2 gift-gnutella-0.0.9.2-r1.ebuild 1448
+MD5 4ee7f9479a2061d0cc68d83da3998ecf ChangeLog 3289
 MD5 875f23093b78af2d864a7a7ba464f126 metadata.xml 223
 MD5 7dbcf3e3110924a2891054f9fd7f349a files/digest-gift-gnutella-0.0.10 73
 MD5 3a2b71fe09957a425acb0f40be079266 files/gift-gnutella-gcc35.patch 457
 MD5 c464f118c813212dd2f6e7ddbfd0bef4 files/digest-gift-gnutella-0.0.9.2-r1 74
 MD5 87a8f04b6651ae553a4b3943d537392d files/cacheupdate.sh 837
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.2.6 (GNU/Linux)
+Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFCAQYvcAgAdbxYsnERAmv9AJ4ms+1BbDX6LC/ppM9Byi1y05eEuwCdEOBQ
-jyO2MNUnsvWfgrlCqMPu4TQ=
-=Z8eW
+iD8DBQFCm63ZZ/iYVBmujdURAo91AJ4inDMXWSuMcLZjJVk4dwVtElg+YACfbUv5
+/1+hECDTIUMLkeFJk/VayG4=
+=/5nw
 -----END PGP SIGNATURE-----
