@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/gift-gnutella
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift-gnutella/ChangeLog,v 1.19 2005/02/02 16:56:09 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift-gnutella/ChangeLog,v 1.20 2005/05/30 22:25:47 sekretarz Exp $
+
+  31 May 2005; Karol Wojtaszek <sekretarz@gentoo.org>
+  gift-gnutella-0.0.9.2-r1.ebuild, gift-gnutella-0.0.10.ebuild:
+  Moved sys-libs/zlib from RDEPEND to DEPEND, bug #82179
 
   02 Feb 2005; Jon Hood <squinky86@gentoo.org> gift-gnutella-0.0.10.ebuild:
   Fix postinstall information.
